# bibtex-validator

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: package.yml
data/: raw.bib
scripts/: SLR_clean.py
src/: core.py
tests/state/: README.md  test_flow_logic.py
